--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <script>
     // ⚙️ CHANGE THIS to your actual Render / Flask backend URL
-    const API_BASE = "https://your-backend.onrender.com";
+    const API_BASE = "https://digital-society-survey.onrender.com";
 
     async function vote(option) {
       await fetch(`${API_BASE}/vote`, {
