--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <script>
     // ⚙️ Change this to your actual backend URL
-    const API_BASE = "https://your-backend.onrender.com";
+    const API_BASE = "https://digital-society-survey.onrender.com";
 
     async function vote(option) {
       await fetch(`${API_BASE}/vote`, {
