--- a/index.html
+++ b/index.html
@@ -3,154 +3,75 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Two-Question Survey</title>
+  <title>Ternary Survey</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
-    :root {
-      --bg: #f7f8fa;
-      --card-bg: #ffffff;
-      --text: #222;
-      --accent: #007bff;
-      --accent-hover: #0056b3;
-      --shadow: rgba(0, 0, 0, 0.1);
-    }
-
     body {
-      font-family: "Inter", "Segoe UI", sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
+      font-family: "Inter", sans-serif;
+      background-color: #f7f8fa;
+      color: #222;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 40px;
       margin: 0;
     }
-
-    h1 {
-      font-size: 1.8rem;
-      margin-bottom: 2rem;
-    }
-
     .survey-card {
-      background-color: var(--card-bg);
+      background-color: #fff;
       border-radius: 16px;
-      box-shadow: 0 4px 20px var(--shadow);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
       padding: 30px;
       text-align: center;
       width: 400px;
       margin-bottom: 2rem;
     }
-
-    .buttons {
-      margin-bottom: 1rem;
-    }
-
-    button {
-      margin: 6px;
-      padding: 10px 18px;
-      font-size: 16px;
-      border: none;
-      border-radius: 10px;
-      background-color: var(--accent);
-      color: white;
-      cursor: pointer;
-      transition: transform 0.15s ease, background-color 0.2s ease;
-    }
-
-    button:hover {
-      background-color: var(--accent-hover);
-      transform: translateY(-2px);
-    }
-
     #chart-wrapper {
       background: #fafafa;
       border-radius: 12px;
       padding: 10px;
       box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.05);
     }
-
     svg {
-      margin-top: 10px;
+      cursor: crosshair;
     }
-
-    footer {
-      margin-top: 2rem;
-      font-size: 0.8rem;
-      color: #777;
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      background: #007bff;
+      color: white;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    button:hover {
+      background: #005dc1;
     }
   </style>
 </head>
 <body>
-  <h1>Two-Question Survey</h1>
+  <h1>Ternary Survey</h1>
 
-  <!-- Question 1 -->
-  <div class="survey-card" id="q1-card">
-    <h2>Question 1: Which option do you prefer?</h2>
-    <div class="buttons">
-      <button onclick="vote('q1', 'A')">Option A</button>
-      <button onclick="vote('q1', 'B')">Option B</button>
-      <button onclick="vote('q1', 'C')">Option C</button>
-    </div>
-    <div id="results-q1"></div>
-    <div id="chart-wrapper">
-      <svg id="ternary-q1" width="350" height="350"></svg>
-    </div>
+  <div class="survey-card">
+    <h2>Question 1</h2>
+    <div id="chart-wrapper"><svg id="q1" width="350" height="350"></svg></div>
   </div>
 
-  <!-- Question 2 -->
-  <div class="survey-card" id="q2-card">
-    <h2>Question 2: Which factor matters most to you?</h2>
-    <div class="buttons">
-      <button onclick="vote('q2', 'A')">Factor A</button>
-      <button onclick="vote('q2', 'B')">Factor B</button>
-      <button onclick="vote('q2', 'C')">Factor C</button>
-    </div>
-    <div id="results-q2"></div>
-    <div id="chart-wrapper">
-      <svg id="ternary-q2" width="350" height="350"></svg>
-    </div>
+  <div class="survey-card">
+    <h2>Question 2</h2>
+    <div id="chart-wrapper"><svg id="q2" width="350" height="350"></svg></div>
   </div>
 
-  <footer>Interactive Survey © 2025</footer>
+  <button id="export-btn">Download Results (CSV)</button>
 
   <script>
     const API_BASE = "https://digital-society-survey.onrender.com";
 
-    async function vote(question, choice) {
-      await fetch(`${API_BASE}/vote`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ question, choice }),
-      });
-      loadResults();
-    }
-
-    async function loadResults() {
-      const response = await fetch(`${API_BASE}/results`);
-      const data = await response.json();
-      updateResults("q1", data.q1);
-      updateResults("q2", data.q2);
-      drawTernary("q1", data.q1);
-      drawTernary("q2", data.q2);
-    }
-
-    function updateResults(qid, data) {
-      document.getElementById(`results-${qid}`).innerText =
-        `A: ${data.A} | B: ${data.B} | C: ${data.C}`;
-    }
-
-    function drawTernary(qid, data) {
-      const svg = d3.select(`#ternary-${qid}`);
+    function drawTernary(qid) {
+      const svg = d3.select(`#${qid}`);
       svg.selectAll("*").remove();
-
       const width = +svg.attr("width");
       const height = +svg.attr("height");
       const margin = 30;
-
-      const A = data.A, B = data.B, C = data.C;
-      const total = A + B + C || 1;
-      const a = A / total, b = B / total, c = C / total;
-
       const points = [
         [width / 2, margin],
         [margin, height - margin],
@@ -163,33 +84,55 @@
         .attr("stroke-width", 2)
         .attr("fill", "none");
 
-      const x = a * points[0][0] + b * points[1][0] + c * points[2][0];
-      const y = a * points[0][1] + b * points[1][1] + c * points[2][1];
-
-      svg.append("circle")
-        .attr("cx", x)
-        .attr("cy", y)
-        .attr("r", 8)
-        .attr("fill", "#007bff")
-        .attr("opacity", 0)
-        .transition()
-        .duration(600)
-        .attr("opacity", 1);
-
       const labels = ["A", "B", "C"];
-      const labelOffsets = [[0, -10], [-10, 20], [10, 20]];
-
+      const offs = [[0, -10], [-10, 20], [10, 20]];
       points.forEach((p, i) => {
         svg.append("text")
-          .attr("x", p[0] + labelOffsets[i][0])
-          .attr("y", p[1] + labelOffsets[i][1])
+          .attr("x", p[0] + offs[i][0])
+          .attr("y", p[1] + offs[i][1])
           .attr("text-anchor", "middle")
           .attr("font-weight", "600")
           .text(labels[i]);
       });
+
+      svg.on("click", function (event) {
+        const [x, y] = d3.pointer(event);
+        const bary = barycentric(x, y, points);
+        if (bary) {
+          sendVote(qid, bary);
+          svg.append("circle")
+            .attr("cx", x)
+            .attr("cy", y)
+            .attr("r", 6)
+            .attr("fill", "#007bff")
+            .attr("opacity", 0.7);
+        }
+      });
     }
 
-    loadResults();
+    function barycentric(x, y, [A, B, C]) {
+      const detT = (B[1] - C[1]) * (A[0] - C[0]) + (C[0] - B[0]) * (A[1] - C[1]);
+      const a = ((B[1] - C[1]) * (x - C[0]) + (C[0] - B[0]) * (y - C[1])) / detT;
+      const b = ((C[1] - A[1]) * (x - C[0]) + (A[0] - C[0]) * (y - C[1])) / detT;
+      const c = 1 - a - b;
+      if (a >= 0 && b >= 0 && c >= 0) return { a, b, c };
+      return null;
+    }
+
+    async function sendVote(question, { a, b, c }) {
+      await fetch(`${API_BASE}/vote`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ question, a, b, c }),
+      });
+    }
+
+    document.getElementById("export-btn").addEventListener("click", () => {
+      window.location.href = `${API_BASE}/export`;
+    });
+
+    drawTernary("q1");
+    drawTernary("q2");
   </script>
 </body>
 </html>
